Implemented AbstractPathShape and converted most path-based brushes to it.